--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.469.0",
     "next": "^15.1.4",
+    "next-seo": "^6.6.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -41,5 +42,6 @@
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
